# hollowpoint

./: .gitignore  COMPILER.md  Makefile  NOTES.md  PACKAGES.md  README.md  WRAPPER.md  cabal.project  hie.yaml  hollowpoint.cabal
app/: Main.hs  Version.hs
app/Command/: Compile.hs  Graph.hs  REPL.hs
cli/: Main.hs
example/: .gitignore  Example.js  Example.purs  packages.dhall  spago.dhall
example/pkg/: .packages  cache-db.json  pubspec.yaml
example/pkg/.dart_tool/: package_config.json
example/pkg/dev/example_q_r_architecture/: externs.json  index.dart
example/pkg/lib/control/applicative/: externs.json  index.dart
example/pkg/lib/control/apply/: externs.json  index.dart
example/pkg/lib/control/bind/: externs.json  index.dart
example/pkg/lib/control/category/: externs.json  index.dart
example/pkg/lib/control/monad/: externs.json  index.dart
example/pkg/lib/control/semigroupoid/: externs.json  index.dart
example/pkg/lib/data/boolean/: externs.json  index.dart
example/pkg/lib/data/eq/: externs.json  index.dart
example/pkg/lib/data/function/: externs.json  index.dart
example/pkg/lib/data/functor/: externs.json  index.dart
example/pkg/lib/data/heyting_algebra/: externs.json  index.dart
example/pkg/lib/data/ord/: externs.json  index.dart
example/pkg/lib/data/ordering/: externs.json  index.dart
example/pkg/lib/data/ring/: externs.json  index.dart
example/pkg/lib/data/semigroup/: externs.json  index.dart
example/pkg/lib/data/semiring/: externs.json  index.dart
example/pkg/lib/data/show/: externs.json  index.dart
example/pkg/lib/data/symbol/: externs.json  index.dart
example/pkg/lib/data/unit/: externs.json  index.dart
example/pkg/lib/data/void/: externs.json  index.dart
example/pkg/lib/dev/example_q_r_architecture/: externs.json  foreign.dart  index.dart
example/src/: Example.dart  Example.purs  Main.purs
notes/: compiler.md  ecosystem.md
src/Language/PureScript/CodeGen/: Dart.hs
src/Language/PureScript/CodeGen/Dart/: Common.hs  CoreImp.hs  CoreImp2.hs  Ident.hs  Options.hs  Printer.hs  String.hs  Version.hs
src/Language/PureScript/CodeGen/Dart/Command/: Compile.hs  Options.hs
src/Language/PureScript/CodeGen/Dart/CoreImp/: AST.hs  Directives.hs  Optimizer.hs
src/Language/PureScript/CodeGen/Dart/CoreImp/Optimizer/: Common.hs  Inliner.hs  MagicDo.hs  TCO.hs  Unused.hs
src/Language/PureScript/CodeGen/Dart/Make/: Actions.hs  Foreigns.hs  Monad.hs
std/console/Effect/: Console.dart
std/effect/: Effect.dart  Effect.purs
std/effect/Effect/: Uncurried.dart
std/effect/src/: Effect.dart
std/effect/src/Effect/: Unsafe.dart
std/flutter/: .packages  README.md  pubspec.yaml  spago.dhall
std/flutter/src/: Flutter.purs
std/flutter/src/Flutter/: DartUI.purs  Foundation.dart  Foundation.purs  Material.dart  Material.purs  Painting.purs  Rendering.purs  Widgets.dart  Widgets.purs
std/prelude/: Prelude.purs
std/prelude/Control/: Apply.dart
std/prelude/Data/: Eq.purs  EuclideanRing.dart  Functor.dart  HeytingAlgebra.purs  Ord.purs  Ring.purs  Semigroup.purs  Semiring.purs  Show.dart  Show.purs  Symbol.purs
std/prelude/Data/Ord/: Unsafe.dart
std/prelude/Record/: Unsafe.dart
std/prelude/src/Control/: Bind.dart
std/prelude/src/Data/: Bounded.dart  Eq.dart  HeytingAlgebra.dart  Ord.dart  Ring.dart  Semigroup.dart  Semiring.dart  Symbol.dart  Unit.dart
std/prelude/src/Data/Show/: Generic.dart
std/print/: spago.dhall
std/print/src/Effect/: Print.dart  Print.purs
x/: .packages  README.md  package.json  packages.dhall  pubspec.yaml  spago.dhall
x/src/: Main.purs  Other.purs  Trial.purs
x/src/Effect/: Print.dart
