cabal-version:       >=1.10
name:                hollowpoint
version:             0.1.0
license:             BSD3
author:              blankhart
category:            Compiler, Purescript
synopsis:            Dart backend for Purescript.
build-type:          Simple
stability:           Experimental

library purescript-dart
  exposed-modules:
    Language.PureScript.CodeGen.Dart
    Language.PureScript.CodeGen.Dart.CoreImp
    Language.PureScript.CodeGen.Dart.CoreImp.AST
    Language.PureScript.CodeGen.Dart.Command.Compile
    Language.PureScript.CodeGen.Dart.Command.Options
    Language.PureScript.CodeGen.Dart.Common
    Language.PureScript.CodeGen.Dart.Make.Actions
    Language.PureScript.CodeGen.Dart.Make.Foreigns
    Language.PureScript.CodeGen.Dart.Make.Monad
    Language.PureScript.CodeGen.Dart.Options
    Language.PureScript.CodeGen.Dart.Printer
    Language.PureScript.CodeGen.Dart.String
    Language.PureScript.CodeGen.Dart.Version
  other-modules:
    Paths_hollowpoint
  build-depends:
      base >=4.11 && < 5
    , base-compat
    , ansi-terminal
    , bytestring
    , aeson
    , aeson-casing
    , containers
    , directory
    , filepath
    , gitrev
    , Glob
    , monad-control
    , mtl
    , optparse-applicative
    , pattern-arrows
    , prettyprinter
    , process
    , protolude
    , purescript == 0.13.6
    , recursion-schemes
    , safe
    , shake
    , sourcemap
    , split
    , text
    , time
    , transformers
    , transformers-base
    , utf8-string
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

executable psd
  main-is:
    Main.hs
  hs-source-dirs:
    cli
  ghc-options:
    -Wall
--    -O2
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.11 && < 5
    , base-compat
    , optparse-applicative
    , aeson
    , aeson-pretty
    , ansi-terminal
    , ansi-wl-pprint
    , bytestring
    , containers
    , directory
    , file-embed
    , filepath
    , gitrev
    , Glob
    , http-types
    , monad-logger
    , mtl
    , network >= 3.0.1.1
    , optparse-applicative >=0.13.0
    , process
    , protolude
    , purescript
    , purescript-dart
    , shake
    , stm
    , text
    , time
    , transformers
    , utf8-string

  default-language:
    Haskell2010

executable hollowpoint
  main-is:
    Main.hs
  other-modules:
    Command.Bundle
    Command.Compile
    Command.Docs
    Command.Docs.Html
    Command.Docs.Markdown
--    Command.Graph
    Command.Hierarchy
    Command.Ide
    Command.Publish
    Command.REPL
    Paths_hollowpoint
    Version
  hs-source-dirs:
    app
  ghc-options:
    -Wall
--    -O2
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.11 && < 5
    , base-compat
    , optparse-applicative
    , aeson
    , aeson-pretty
    , ansi-terminal
    , ansi-wl-pprint
    , blaze-html
    , bytestring
    , containers
    , directory
    , file-embed
    , filepath
    , gitrev
    , Glob
    , haskeline
    , http-types
    , monad-logger
    , mtl
    , network >= 3.0.1.1
    , optparse-applicative >=0.13.0
    , process
    , protolude
    , purescript
    , purescript-dart
    , sourcemap
    , stm
    , text
    , time
    , transformers
    , utf8-string
    , wai ==3.*
    , wai-websockets ==3.*
    , warp ==3.*
    , websockets >=0.9 && <0.13
  default-language:
    Haskell2010


