cabal-version:       >=1.10
name:                hollowpoint
version:             0.1.0
license:             BSD3
author:              blankhart
category:            Compiler, Purescript
synopsis:            Dart backend for Purescript.
build-type:          Simple
stability:           Experimental

library purescript-dart
  exposed-modules:
    Language.PureScript.CodeGen.Dart
    Language.PureScript.CodeGen.Dart.CoreImp
    Language.PureScript.CodeGen.Dart.CoreImp.AST
    Language.PureScript.CodeGen.Dart.CoreImp.Directives
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer.Common
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer.Inliner
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer.MagicDo
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer.TCO
    Language.PureScript.CodeGen.Dart.CoreImp.Optimizer.Unused
    Language.PureScript.CodeGen.Dart.Command.Compile
    Language.PureScript.CodeGen.Dart.Command.Options
    Language.PureScript.CodeGen.Dart.Ident
    Language.PureScript.CodeGen.Dart.Printer
    Language.PureScript.CodeGen.Dart.Version
  other-modules:
    Paths_hollowpoint
  build-depends:
      base >=4.11 && < 5
    , base-compat
    , ansi-terminal
    , bytestring
    , aeson
    , aeson-casing
    , containers
    , deriving-compat
    , directory
    , filepath
    , gitrev
    , Glob
    , monad-control
    , mtl
    , optparse-applicative
    , pattern-arrows
    , prettyprinter
    , process
    , protolude
    , purescript == 0.14.5
    , purescript-cst
    , recursion-schemes
    , safe
    , shake
    , split
    , text
    , time
    , transformers
    , transformers-base
    , utf8-string
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  default-language:
    Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections

executable psd
  main-is:
    Main.hs
  hs-source-dirs:
    cli
  ghc-options:
    -Wall
--    -O2
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.11 && < 5
    , base-compat
    , optparse-applicative
    , aeson
    , aeson-pretty
    , ansi-terminal
    , ansi-wl-pprint
    , bytestring
    , containers
    , directory
    , file-embed
    , filepath
    , gitrev
    , Glob
    , http-types
    , monad-logger
    , mtl
    , network >= 3.0.1.1
    , optparse-applicative >=0.13.0
    , process
    , protolude
    , purescript
    , purescript-dart
    , shake
    , stm
    , text
    , time
    , transformers
    , utf8-string

  default-language:
    Haskell2010
